<resources>
    <string name="app_name">ProyInscripcion</string>
    <string name="action_settings">Settings</string>
    <string name="listainscritos">Lista Inscritos</string>
    <string name="title_activity_form">form</string>
    <string name="nombre">Nombre</string>
    <string name="cargo">Cargo</string>
    <string name="identificacion">Identificacion</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">editar</string>
    <string name="crearpersona">CrearPersona</string>
</resources>
